[package]
name = "Login"
version = "0.1.0"
authors = ["ida"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"
reqwest = "0.11"
select = "0.6"
serde_json = "1.0"

[build-dependencies]
slint-build = "1.0"
